# hoot.c

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependency.cmake
example/host/: CMakeLists.txt  CMakePresets.json  hello_world.cpp
script/: build_type.cmake  dependency.cmake  host.cmake
toolchain/: arm-none-eabi.cmake
