cmake_minimum_required(VERSION 3.24)

project(hoot.c)

message("[configure] CMAKE_HOST_SYSTEM = ${CMAKE_HOST_SYSTEM} (${CMAKE_HOST_SYSTEM_PROCESSOR})")
message("[configure] CMAKE_SYSTEM = ${CMAKE_SYSTEM} (${CMAKE_SYSTEM_PROCESSOR})")

set(HOOT_DEPENDENCY ${CMAKE_SOURCE_DIR}/dependency CACHE INTERNAL "")
set(HOOT_TARGET     ${CMAKE_SOURCE_DIR}/target CACHE INTERNAL "")
set(HOOT_LIBRARY    ${CMAKE_SOURCE_DIR}/library CACHE INTERNAL "")
set(HOOT_BUILD      ${CMAKE_SOURCE_DIR}/build CACHE INTERNAL "")

message("[configure] HOOT_DEPENDENCY = ${HOOT_DEPENDENCY}")
message("[configure] HOOT_TARGET = ${HOOT_TARGET}")
message("[configure] HOOT_LIBRARY = ${HOOT_LIBRARY}")
message("[configure] HOOT_BUILD = ${HOOT_BUILD}")

if(NOT HOOT_TARGET_NAME)
set(HOOT_TARGET_NAME "host" CACHE INTERNAL "")
endif(NOT HOOT_TARGET_NAME)
set(HOOT_TARGET_INCLUDE ${HOOT_TARGET}/${HOOT_TARGET_NAME} CACHE INTERNAL "")

message("[configure] HOOT_TARGET_NAME = ${HOOT_TARGET_NAME}")
message("[configure] HOOT_TARGET_INCLUDE = ${HOOT_TARGET_INCLUDE}")

set(HOOT_BUILD_TYPE_DEBUG   "debug" CACHE INTERNAL "")
set(HOOT_BUILD_TYPE_RELEASE "release" CACHE INTERNAL "")

string(TOLOWER ${CMAKE_BUILD_TYPE} HOOT_BUILD_TYPE)
if(NOT HOOT_BUILD_TYPE)
set(HOOT_BUILD_TYPE ${HOOT_BUILD_TYPE_DEBUG} CACHE INTERNAL "")
endif(NOT HOOT_BUILD_TYPE)

message("[configure] HOOT_BUILD_TYPE = ${HOOT_BUILD_TYPE}")

set(HOOT_BUILD_ARCHIVE "${HOOT_BUILD}/${HOOT_TARGET_NAME}/${HOOT_BUILD_TYPE}" CACHE INTERNAL "")
set(HOOT_BUILD_INCLUDE "${HOOT_BUILD_ARCHIVE}/include" CACHE INTERNAL "")

message("[configure] HOOT_BUILD_ARCHIVE = ${HOOT_BUILD_ARCHIVE}")
message("[configure] HOOT_BUILD_INCLUDE = ${HOOT_BUILD_INCLUDE}")

include(${HOOT_TARGET_INCLUDE}/target.cmake)

add_compile_definitions(
    -DHOOT_TARGET_NAME="${HOOT_TARGET_NAME}"
    -DHOOT_BUILD_TYPE="${HOOT_BUILD_TYPE}"
    $<$<CONFIG:DEBUG>:-DDEBUG=1>
    $<$<CONFIG:RELEASE>:-DRELEASE=1>
)

add_subdirectory(library/hoot)
